--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
   <div class="screen">
     <h1>Score: <span class="primary">${score}</span></h1>
+    <h2>Total Score: <span class="total">${totalScore}</span></h2>
     <a href="#start" class="btn" id="finish">FINISH</a>
   </div>
 
