--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <ul class="time-list" id="time-list">
       <li>
         <button class="time-btn" data-time="10">
-          10 сек
+          10 sec
         </button>
       </li>
       <li>
         <button class="time-btn" data-time="20">
-          20 сек
+          20 sec
         </button>
       </li>
       <li>
         <button class="time-btn" data-time="30">
-          30 сек
+          30 sec
         </button>
       </li>
       <li>
         <button class="time-btn" data-time="45">
-          45 сек
+          45 sec
         </button>
       </li>
     </ul>
